Bug 131082 - Grouped shapes missing fill property set at the group level
Summary: Grouped shapes missing fill property set at the group level
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.4.2 release
Hardware: All All
: medium normal
Assignee: nd101
URL:
Whiteboard: target:7.0.0
Keywords:
: 128404 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-03-03 06:46 UTC by nd101
Modified: 2020-06-16 14:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample doc (25.27 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-03-03 06:47 UTC, nd101
Details
what it looks like in MSO (8.26 KB, image/png)
2020-03-03 06:47 UTC, nd101
Details
what it looks like in IMPRESS (1.82 KB, image/png)
2020-03-03 06:48 UTC, nd101
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nd101 2020-03-03 06:46:08 UTC
Description:
When shapes are grouped, and fill property is specified at the group level, it fails to show in IMPRESS

Steps to Reproduce:
1.Create a document in MSO with grouped shapes
2.Specify fill style for the group
3.Open the document in IMPRESS to see the difference

Actual Results:
Fill color is missing

Expected Results:
Fill color is present


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.beta1 (x64)
Build ID: a187af327633f5f00363be5131bd21a13e0f1a7b
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: zh-CN (zh_CN); UI locale: zh-CN
Calc: threaded
Comment 1 nd101 2020-03-03 06:47:06 UTC
Created attachment 158323 [details]
sample doc
Comment 2 nd101 2020-03-03 06:47:40 UTC
Created attachment 158324 [details]
what it looks like in MSO
Comment 3 nd101 2020-03-03 06:48:04 UTC
Created attachment 158325 [details]
what it looks like in IMPRESS
Comment 4 Commit Notification 2020-03-20 10:06:55 UTC
nd101 committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3b250f0c009476cfe7d35ebd1d8220ceac440791

tdf#131082 fix missing fill property of grouped shapes

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Andras Timar 2020-06-16 07:19:16 UTC
*** Bug 128404 has been marked as a duplicate of this bug. ***