tdf#131082 fix missing fill property of grouped shapes

When shapes are grouped together, and fill property is specified
at the group level in MSO, it fails to work in IMPRESS.

This fix is to set the fill property when it is being imported.

Change-Id: I89920e71fc558f54d49ef7b065c549a732bc2b10
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89862
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>